--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 127.0.0.1; #вставить нужный IP на сервере
+    server_name 127.0.0.1 84.201.176.153;
 
     location /static/ {
         alias /code/static/;
